Updates to page structure and styles

--- a/system/user/templates/default_site/news.group/news_item.html
+++ b/system/user/templates/default_site/news.group/news_item.html
@@ -1,5 +1,5 @@
 {layout="layouts/_wrapper"}
-{exp:channel:enteries channel="news_item"}
+{exp:channel:entries channel="news_item"}
 {news_item}
 <div class="news-item-main">
 <section class="news-item-heading">
