--- a/system/user/templates/default_site/news.group/index.html
+++ b/system/user/templates/default_site/news.group/index.html
@@ -1,21 +1,44 @@
 {layout="layouts/_wrapper"}
 <div class="news-container">
+    <div class="cards-main">
 {exp:channel:entries channel="news_item" limit="5" dynamic="no"}
 {news_item}
-{if count == 1}
-<div class="news-featured-item">
-{news_item:event_image wrap="image"}
-<div class="news-featured-info">
-<h1 class="featured-info-header">{news_item:event_name}</h1>
-<h2><em>{news_item:event_date format="%F %d %Y"}</em></h2>
-<p>{news_item:event_description}</p></div></div>{/if}
-{if count > 1}<div class="news-grid">
-<div class="news-item">{news_item:event_image wrap="image"}
-<div class="news-content"><h1>{news_item:event_name}</h1>
-<p>{news_item:event_description}</p>
-<span class="news-item-date">{news_item:event_date format="%F %d %Y"}</span>
 
-</div></div></div>{/if}
+        <ul class="cards">
+            <li class="cards_item">
+                <div class="card truncated">
+                    <div class="card_image"><img src="{news_item:event_image wrap=link}" alt="{news_item:alt_text}"/></div>
+                    <div class="card_content">
+                        <h2 class="card_title"><span class="title">{news_item:event_name}</span></h2>
+                        <div class="card_text">
+                            {news_item:event_description}
+                            </div>
+                        <button class="read-more"><svg viewBox="0 0 448 512" width="16px" id="chevron-down">
+                            <path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="black"/>
+                        </svg></button>
+                        <button class="read-less"><svg viewBox="0 0 448 512" width="16px" id="chevron-up">
+                            <path d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z" fill="black"/>
+                        </svg></button>
+                    </div>
+                </div>
+            </li>
+
+        </ul>
 {/news_item}
 {/exp:channel:entries}
+        </div>
 </div>
+<script>
+    document.body.addEventListener("click", function(event) {
+        let card = event.target.closest(".card");
+        if (event.target.classList.contains("read-more")) {
+                card.classList.remove("truncated");
+            } else {
+            card.classList.add("truncated");}}
+    );
+
+
+
+
+
+</script>
