--- a/system/user/templates/default_site/styles.group/footer.css
+++ b/system/user/templates/default_site/styles.group/footer.css
@@ -5,12 +5,15 @@
   bottom: 0px;
   right: 0;
   width: 100%;
-   background:linear-gradient(45deg, rgba(239, 173, 33, 0.6), rgba(239, 173,33, 0.4));
-backdrop-filter: blur(4px);
-box-shadow: 0 0 20px #000;
+    background: rgb(255,0,0);
+    background: linear-gradient(45deg, rgba(255,0,0,0.75) 0%, rgba(207,69,0,0.5) 50%, rgba(219,219,0,0.25) 100%);
+
+    backdrop-filter: blur(3px);
+    box-shadow: 0 0 20px #000;
     border-radius: 15px;
-    border: 2px solid rgba(144, 77, 0, 0.5);
-    color: var(--color-on-surface); /* Neutral color */
+    border: 2px solid rgba(170, 55, 0, 0.8);
+    /*background: rgba( 255, 255, 0, 0.2);*/
+    color: var(--color-on-surface);
     font-family:"Protest Revolution";
     height:min-content;
     margin-top:5em;
@@ -80,8 +83,8 @@ p{
 }
 
 .footer-section a:hover {
-    background:rgba(131,217,221, 0.5);
-	color:var(--color-on-primary);
+    background:rgba(0,0,230, 1);
+	color:var(--color-on-tertiary-container);
 }
 
 .social-icons, .footer-copyright, .footer-links {
@@ -103,32 +106,31 @@ p{
 .social-icons > a {
     padding: 5px 10px;
     border-radius: 5px;
-    background:rgba(131,217,221, 0.5);
-	color:var(--color-on-primary);
+    background:rgba(219,219,0, 1);
+	color:var(--color-on-secondary-container);
     transition: background 0.3s ease;
     
 }
 
-.footer-links > a {
 
-    border-radius: 5px;
-        background-color:rgba(84,171,175,0.5);
-    color:var(--color-on-primary);
-    transition: background 0.3s ease;
-}
 .social-icons a:hover {
-    background:rgba(131,217,221, 0.5);
-	color:var(--color-on-primary); /* Secondary color with transparency */
+    background:rgba(0,0,230, 1);
+	color:var(--color-on-tertiary-container); /* Secondary color with transparency */
 }
 
-.footer-links a:hover{
-    background:rgba(131,217,221, 0.5);
-	color:var(--color-on-primary);
-}
+
 @media (max-width: 768px) {
     .footer-content {
         flex-direction: column;
-        align-items: center;
+        align-items: center;background: rgb(219,219,0);
+        background: linear-gradient(45deg, rgba(219,219,0,0.75) 0%, rgba(207,69,0,0.5) 50%, rgba(255,0,0,0.25) 100%);
+
+        backdrop-filter: blur(3px);
+        box-shadow: 0 0 20px #000;
+        border-radius: 15px;
+        border: 2px solid rgba(170, 55, 0, 0.8);
+        /*background: rgba( 255, 255, 0, 0.2);*/
+        color: var(--color-on-surface);
     }
 
     .footer-section {
