--- a/system/user/templates/default_site/styles.group/locations.css
+++ b/system/user/templates/default_site/styles.group/locations.css
@@ -4,10 +4,10 @@
         .active {
             display: block;
             margin-top:20px;
-            color:var(--color-on-secondary-container);
-            border: 4px solid var(--color-secondary);
+            color:var(--color-on-primary-container);
+            border: 4px solid var(--color-primary);
             border-radius:40px;
-            background:linear-gradient(120deg, rgba(239, 173,33,0.5), rgba(239, 173,33,0.7));
+            background:linear-gradient(120deg, rgba(207 ,69, 0,0.5), rgba(207, 69 ,0,0.7));
             backdrop-filter: blur(6px);
             height:max-content;
             padding:20px;
