--- a/system/user/templates/default_site/styles.group/news.css
+++ b/system/user/templates/default_site/styles.group/news.css
@@ -1,165 +1,134 @@
 .news-container {
-display:flex;
-min-height:60vh;
-width:100vw;
-flex-direction:row;
-flex-wrap:wrap;
-}
-.news-feature{
-  margin-top: 20px;
+    display:flex;
+    min-height:60vh;
+    width:100vw;
+    flex-direction:row;
+    flex-wrap:wrap;
 }
 
-.news-featured-item {
- display:flex;
- flex-direction:row;
- margin:0 auto;
- width:60%;
- background:linear-gradient(45deg, rgba(255, 0, 0, 0.6), rgba(255, 0,0, 0.4));
-backdrop-filter: blur(6px);
-border-top: 2px solid rgba(144, 77, 0, 0.25);
-border-left: 2px solid rgba(144, 77, 0, 0.2);
-  border-radius:20px;
-  color: var(--color-inverse-on-surface);
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  height:max-content;
+
+
+.news-main {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.news-featured-item img {
-  width:25%;
-  height: auto;
+.cards {
+    display: flex;
+  flex-direction:row;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-left:25px;
 }
 
-.news-featured-info {
-
-
+.cards_item {
+    display: flex;
+    padding: 1rem;
 }
 
-.news-featured-info .featured-info-header {
-  
-  font-weight: bold;
-  margin-bottom: 10px;
+.card_image {
+    display:flex;
+    justify-content:center;
+    width: 100%;
+    height:50%;
+    object-fit: cover;
 }
 
-.news-featured-info h2 {
-  margin-top: 0;
-  font-size: 24px;
+@media (max-width: 40rem) {
+    .cards_item {
+        width: 320px;
+    }
 }
 
-.news-featured-info p {
-  font-size: 20px;
-  line-height: 1.5;
+@media (min-width: 40rem) {
+    .cards_item {
+        width: 50%;
+    }
 }
 
-.news-featured-info .date {
-  display: block;
-  margin-top: 10px;
-  color: #ddd;
+@media (min-width: 56rem) {
+    .cards_item {
+        width: 33.3333%;
+    }
 }
 
-.news-featured-info .read-more a {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #e74c3c;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
+.card {
+    background: linear-gradient(60deg, rgba(239,173,33,0.6) 0%, rgba(231,109,44,0.4) 50%, rgba(255,0,0,0.2) 100%);
+    backdrop-filter: blur(6px);
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: fit-content;
+
+    .card_text {
+        line-height: 1.2em;
+
+        p {
+            padding: 0;
+            margin: 0 0 1.2em;
+        }
+    }
+
+    &.truncated {
+        padding: 0;
+        position: relative;
+        .card_text {
+            max-height: 4.85em;
+            overflow: hidden;
+        }
+
+        .read-more {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 8px;
+            appearance: none;
+            background: transparent;
+            border: 0;
+            color: var(--color-on-surface);
+            padding: 0;
+            cursor: pointer;
+        }
+
+        .read-less {
+            display: none;
+        }
+    }
 }
 
-.featured-info .share {
-  margin-top: 20px;
+.card_content {
+    padding: 1rem;
 }
 
-.featured-info .share span {
-  margin-right: 10px;
+.card_title {
+    border-bottom: 1px solid gainsboro;
 }
 
-.featured-info .share a {
-  margin-right: 10px;
-  color: #fff;
-  font-size: 18px;
-  text-decoration: none;
+.card_text {
 }
 
-.featured-info .share a i {
-  font-size: 24px;
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  text-align: center;
+.title {
+    color: var(--color-secondary);
+    text-shadow: 0.7px 0.7px 1px rgba(0,0,0, 0.5);
 }
 
-.news-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 20px;
-  margin-left: 20px;
+.read-more {
+    display: none;
 }
 
-.news-item {
-  width: 32%;
-  background: var(--color-primary-container);
-  color:var(--color-on-primary-container);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.news-item img {
-  width: 25%;
-  height: auto;
-}
-
-.news-content {
-  padding: 20px;
-}
-
-.news-content h1 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-.news-content p {
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.news-content .date {
-  display: block;
-  margin-top: 10px;
-  color: #999;
-}
-
-.news-content .read-more a {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #e74c3c;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-}
-
-.news-content .share {
-  margin-top: 20px;
-}
-
-.news-content .share span {
-  margin-right: 10px;
-}
-
-.news-content .share a {
-  margin-right: 10px;
-  color: #333;
-  font-size: 18px;
-  text-decoration: none;
-}
-
-.news-content .share a i {
-  font-size: 24px;
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  text-align: center;
+.read-less {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+    appearance: none;
+    background: transparent;
+    border: 0;
+    color: var(--color-secondary);
+    padding: 0;
+    cursor: pointer;
 }
