--- a/system/user/templates/default_site/styles.group/staff_card.css
+++ b/system/user/templates/default_site/styles.group/staff_card.css
@@ -4,7 +4,7 @@
     width:100%;
     flex-wrap:wrap;
     flex-direction:column;
-    color:var(--color-on-primary);
+    color:var(--color-on-surface);
     align-items:start;
     justify-content:center;
     height:min-content;
@@ -20,17 +20,17 @@ width:max-content;
 margin:0 auto;
 margin-top:20px;
 padding: 20px;
-color:var(--color-on-primary);
+color:var(--color-on-primary-container);
 border-radius: 15px;
 background: linear-gradient(
     45deg,
-    rgba(255, 150, 44, 0.5),
-    rgba(255, 150, 44, 0.6)
+    rgba(207 ,69 ,0 ,0.5),
+    rgba(219, 219 ,0, 0.6)
   );
   backdrop-filter: blur(4px);
   box-shadow: 0 0 20px #000;
-  border-top: 2px solid rgba(144, 77, 0, 0.25);
-  border-left: 2px solid rgba(144, 77, 0, 0.2);
+  border-top: 2px solid rgba(190, 194, 255, 0.3);
+  border-left: 2px solid rgba(190, 194, 255, 0.5);
 }
 .contact-image{
 padding-top:90px;
@@ -42,29 +42,29 @@ padding-left:55px;
   padding: 20px;
   background: linear-gradient(
     45deg,
-    rgba(255, 150, 44, 0.3),
-    rgba(255, 150, 44, 0.4)
+    rgba(219, 219, 0, 0.3),
+    rgba(207, 69, 0, 0.4)
   );
   backdrop-filter: blur(4px);
   box-shadow: 0 0 20px #000;
-  border-top: 2px solid rgba(144, 77, 0, 0.25);
-  border-left: 2px solid rgba(144, 77, 0, 0.2);
+    border-top: 2px solid rgba(190, 194, 255, 0.3);
+    border-left: 2px solid rgba(190, 194, 255, 0.5);
 }
 
 .staff-card img {
   width: 150px;
   border-radius: 50%;
-  border: 2px solid var(--color-primary);
+  border: 2px solid var(--color-tertiary);
 }
 
 .staff-card h2 {
-  color: #fff;
+  color: var(--color-on-primary-container);
   font-weight: normal;
   font-size: 25px;
 }
 
 .staff-card p {
-  color: var(--color-on-primary);
+  color: var(--color-on-primary-container);
   text-align: justify;
   font-size: 15px;
 }
@@ -73,11 +73,9 @@ padding-left:55px;
   display: inline-block;
   padding:15px;
   border-radius:10px;
-  border:4px solid var(--color-primary);
+  border:4px solid var(tertiary);
   font-size: 22px;
-  background:rgba(255,189,73,0.5);
-  backdrop-filter:blur(4px);
-
+  background:var(--color-tertiary-container);
   margin-right: 10px;
   color: var(--color-on-tertiary-container);
   transition: 0.4s all;
@@ -92,4 +90,13 @@ padding:20px;
 .about-title{
 margin:0;
 padding:015px
+}
+
+.contact-form h2{
+    font-size:2em;
+    color:var(--color-on-primary-container);
+}
+
+.contact-form label{
+    font-size:1.5em;
 }
