Updates to page structure and styles

--- a/system/user/templates/default_site/_partials/footer.html
+++ b/system/user/templates/default_site/_partials/footer.html
@@ -16,7 +16,7 @@
   </div>
   <div class="footer-section third-section"><h3>Reach Out!</h3>
   <div class-"footer-links">
- <a href="{url="about/contact"}">Contact Form</a>
+ <a href="{path="about/contact-us"}">Contact Form</a>
  <p>E-mail: reach@nolimitsmaf.com</p>
  <p>Phone: KL5-867-5309</p>
  </div>
