--- a/system/user/templates/default_site/_partials/sign_up.html
+++ b/system/user/templates/default_site/_partials/sign_up.html
@@ -11,7 +11,7 @@
     <input class="sign-in-up-input" type="email" placeholder="Email*">
     <input class="sign-in-up-input" type="password" placeholder="Password*">
     <input class="sign-in-up-input" type="password" placeholder="Confirm Password*">
-    <label><input class="sign-in-up-input" type="checkbox" name="accept_terms" value="y">I accept the Terms of Service</label>
+    <label><input class="sign-in-up-input" type="checkbox" name="accept_terms" value="y">I accept the <a href="{path="policy/terms"}" target="_blank">Terms of Service</a></label>
     <input class="sign-in-up-button" type="submit" value="Register" />
     <!-- input fields end -->
     {/exp:member:registration_form}
