--- a/system/user/templates/default_site/layouts.group/_wrapper.html
+++ b/system/user/templates/default_site/layouts.group/_wrapper.html
@@ -6,6 +6,7 @@
 			<title>No Limits Martial Arts and Fitness</title>
 			<link rel="stylesheet" href="{stylesheet="styles/global"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/nav"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/staff"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/footer"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/homepage"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/sign_in"}"/>
