--- a/system/user/templates/default_site/styles.group/news.css
+++ b/system/user/templates/default_site/styles.group/news.css
@@ -8,9 +8,11 @@
 
 
 
-.news-main {
+.cards-main {
     max-width: 1200px;
     margin: 0 auto;
+    display:flex;
+    flex-direction:row;
 }
 
 .cards {
@@ -31,9 +33,10 @@
 .card_image {
     display:flex;
     justify-content:center;
-    width: 100%;
-    height:50%;
-    object-fit: cover;
+  	height:50%;
+    width:auto;
+
+    object-fit: contain;
 }
 
 @media (max-width: 40rem) {
