--- a/system/user/templates/default_site/styles.group/sign-in-sign-up.css
+++ b/system/user/templates/default_site/styles.group/sign-in-sign-up.css
@@ -174,7 +174,7 @@ form {
 }
 
 .sign-in-up-input {
-    background:var(--color-secondary);
+    background:var(--color-tertiary-container);
     width: 65%;
     color:var(--color-on-secondary);
     border: none;
