Updates to page structure and styles

--- a/system/user/templates/default_site/layouts.group/_wrapper.html
+++ b/system/user/templates/default_site/layouts.group/_wrapper.html
@@ -5,6 +5,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>No Limits Martial Arts and Fitness</title>
 			<link rel="stylesheet" href="{stylesheet="styles/global"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/school_info"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/nav"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/staff"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/footer"}"/>
