--- a/system/user/templates/default_site/styles.group/staff_card.css
+++ b/system/user/templates/default_site/styles.group/staff_card.css
@@ -73,13 +73,19 @@ padding-left:55px;
   display: inline-block;
   padding:15px;
   border-radius:10px;
-  border:4px solid var(tertiary);
+  border:4px solid var(--color-tertiary);
   font-size: 22px;
-  background:var(--color-tertiary-container);
+  background:rgba(207,69,0,0.2);
+  backdrop-filter:blur(3px);
   margin-right: 10px;
-  color: var(--color-on-tertiary-container);
+  color: var(--color-on-primary-container);
   transition: 0.4s all;
   cursor: pointer;
+  
+  &:hover{
+  background rgba(0,0,230,0.4);
+  backdrop-filter:blur(3px);
+  }
 }
 
 .about-story{
